profile partially complete

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
             </ul>    
         </div>
 
-        <div id="main-body">This is a test</div>
+        <div id="main-body">
+            <div id="profile" class="row">
+                <div id="profile-img" class="col-6 d-flex justify-content-center">
+                    <img src="assets/profile.JPG" height="450px" width="300px">
+                </div>
+                <div id="profile-body" class="col-6 d-flex align-items-center">
+                    Hi! Welcome to my personal page. I am currently enrolled in the double degree program (Business Administration and Computer Science) at Wilfrid Laurier University in my 3rd year. My career aspiration is to apply my technical skills as a developer and knowledge of the business environment to create technologies to make business processes more efficient.
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
