--- a/index.html
+++ b/index.html
@@ -16,34 +16,47 @@
     
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.0/angular.min.js"></script>
         <script src="./index.js"></script>
 
         <title>Abdul-Baseet Shabi</title>
     </head>
-    <body>
+    <body ng-app="myApp">
         <div id="navigation-body">
             <ul id="navigation" class="row">
-                <a href="#main-body" class="navigation-item col active">Introduction</a>
-                <a href="#" class="navigation-item col">Profile</a>
+                <a href="#introduction" class="navigation-item col active">Introduction</a>
+                <a href="#profile" class="navigation-item col">Profile</a>
                 <a href="#" class="navigation-item col">Experiences</a>
                 <a href="#" class="navigation-item col">Projects</a>
                 <a href="#" class="navigation-item col">Contact</a>
             </ul>    
         </div>
 
-        <div id="main-body">
-            <div id="introduction" class="row">
-                <div id="introduction-img" class="col-6 d-flex justify-content-center">
-                    <img src="assets/introduction.JPG" height="450px" width="300px">
-                </div>
-                <div id="introduction-body" class="col-6 d-flex align-items-center">
-                    Hi! Welcome to my personal page. I am currently enrolled in the double degree program (Business Administration and Computer Science) at Wilfrid Laurier University in my 3rd year. My career aspiration is to apply my technical skills as a developer and knowledge of the business environment to create technologies to make business processes more efficient.
-                </div>
+        <div id="introduction" class="row makeHeight100">
+            <div id="introduction-img" class="col-6 d-flex justify-content-center align-items-center">
+                <img src="assets/introduction.JPG" height="450px" width="300px" alt="My Picture">
+            </div>
+            <div id="introduction-body" class="col-6 d-flex align-items-center">
+                Hi! Welcome to my personal page. My name is Abdul-Baseet Shabi.I am an international student from Nigeria currently enrolled in the double degree program (Business Administration and Computer Science) at Wilfrid Laurier University in my 3rd year. My career aspiration is to apply my technical skills as a developer and knowledge of the business environment to create technologies to make business processes more efficient.
             </div>
         </div>
-
-        <div id="">
-
+        
+        <div id="profile" class="row makeHeight100" ng-controller="ProfileController">
+            <div id="languages" class="col">
+                <h2>Programming Languages</h2>
+                <div id="language-body" class="row">
+                    <div ng-repeat="language in languages" class="col languages">
+                        <img src="{{language.url}}" alt="{{language.name}} image">
+                        <label>{{ language.name }}</label>
+                    </div>
+                </div>
+            </div>
+            <div id="tools" class="col">
+                <h2>Tools</h2>
+            </div>
+            <div id="concepts" class="col">
+                <h2>Concepts</h2>
+            </div>
         </div>
     </body>
 </html>
