--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <body ng-app="myApp">
         <div id="navigation-body">
             <ul id="navigation" class="row">
-                <a href="#introduction" class="navigation-item col active">Introduction</a>
+                <a href="#introduction" class="navigation-item col active-nav">Introduction</a>
                 <a href="#profile" class="navigation-item col">Profile</a>
-                <a href="#" class="navigation-item col">Experiences</a>
+                <a href="#experience" class="navigation-item col">Experience</a>
                 <a href="#" class="navigation-item col">Projects</a>
                 <a href="#" class="navigation-item col">Contact</a>
             </ul>    
@@ -68,5 +68,41 @@
                 </div>
             </div>
         </div>
+
+        <div id="experience" class="carousel slide makeHeight100" data-ride="carousel" data-interval="false" ng-controller="ExperienceController">
+            <ol class="carousel-indicators">
+                <li data-target="#experience" data-slide-to="0" class="active"></li>
+                <li data-target="#experience" data-slide-to="1"></li>
+                <li data-target="#experience" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner makeHeight100">
+                <div class="carousel-item active makeHeight100" style="padding: 20px 0">
+                   <h2>Coop Experiences</h2>
+                   <div class="card" ng-repeat="coop in coops">
+                        <div class="card-body">
+                            <h5 class="card-title d-flex justify-content-between"><label>{{ coop.jobTitle }}</label><label>{{ coop.dateFrom }} - {{ coop.dateTo }}</label></h5>
+                            <h6 class="card-subtitle mb-2 text-muted" style="font-style: italic;">{{ coop.companyName }}, {{ coop.location }}</h6>
+                            <ul ng-repeat="description in coop.descriptions">
+                                <li class="card-text">{{ description }}</li>
+                            </ul>
+                        </div>
+                   </div>
+                </div>
+                <div class="carousel-item makeHeight100">
+                    Test2
+                </div>
+                <div class="carousel-item makeHeight100">
+                    Test3
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#experience" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#experience" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+            </div>
     </body>
 </html>
