--- a/index.html
+++ b/index.html
@@ -118,8 +118,31 @@
         <!-- Projects -->
         <div id="projects" class="makeHeight100">
             <h2>Projects</h2>
-            <div style="border: 1px solid" class="makeHeight100">
-
+            <div id="projects-slideshow" class="carousel slide makeHeight100" data-ride="carousel" data-interval="false">
+                <ol class="carousel-indicators">
+                  <li data-target="#projects-slideshow" data-slide-to="0" class="active"></li>
+                  <li data-target="#projects-slideshow" data-slide-to="1"></li>
+                  <li data-target="#projects-slideshow" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner makeHeight100">
+                  <div class="carousel-item makeHeight100 active">
+                    <img class="d-block w-100" src="..." alt="First slide">
+                  </div>
+                  <div class="carousel-item makeHeight100">
+                    <img class="d-block w-100" src="..." alt="Second slide">
+                  </div>
+                  <div class="carousel-item makeHeight100">
+                    <img class="d-block w-100" src="..." alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#projects-slideshow" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#projects-slideshow" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
 
