--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <title>Abdul-Baseet Shabi</title>
     </head>
     <body ng-app="myApp">
-
         <!-- navigation -->
         <div id="navigation-body">
             <ul id="navigation" class="row">
@@ -151,6 +150,29 @@
             <h2>Contact Information</h2>
             <div style="border: 1px solid" class="makeHeight100">
 
+            </div>
+        </div>
+
+        <!-- Disclamer -->
+        <!-- Button trigger modal -->
+        <button style="display: none;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Launch demo modal
+        </button>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Disclaimer!!!</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                    Website is still undergoing construction. But you can view the content so far.
+                </div>
+            </div>
             </div>
         </div>
     </body>
