--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script src="./index.js" defer></script>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -17,7 +19,6 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.0/angular.min.js"></script>
-        <script src="./index.js"></script>
 
         <title>Abdul-Baseet Shabi</title>
     </head>
@@ -34,13 +35,11 @@
         </div>
 
         <!-- Introduction -->
-        <div id="introduction" class="row makeHeight100">
+        <div id="introduction" class="row makeHeight100" ng-controller="IntroductionController">
             <div id="introduction-img" class="col-6 d-flex justify-content-center align-items-center">
                 <img src="assets/introduction.JPG" height="450px" width="300px" alt="My Picture">
             </div>
-            <div id="introduction-body" class="col-6 d-flex align-items-center">
-                Hi! Welcome to my personal page. My name is Abdul-Baseet Shabi.I am an international student from Nigeria currently enrolled in the double degree program (Business Administration and Computer Science) at Wilfrid Laurier University in my 3rd year. My career aspiration is to apply my technical skills as a developer and knowledge of the business environment to create technologies to make business processes more efficient.
-            </div>
+            <div id="introduction-body" class="col-6 d-flex align-items-center">{{ biography }}</div>
         </div>
         
         <!-- Profile -->
