--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h2 class="labelH2">Education</h2>
                 </div>
                 <div class="col">
-                    Hi! Welcome to my personal page. My name is Abdul-Baseet Shabi.I am an international student from Nigeria currently enrolled in the double degree program (Business Administration and Computer Science) at Wilfrid Laurier University in my 3rd year. My career aspiration is to apply my technical skills as a developer and knowledge of the business environment to create technologies to make business processes more efficient.
+                    This is a placeholder
                 </div>
             </div>
             <hr>
