fix view of profile mobile

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h2 class="labelH2">Programming Languages</h2>
                 </div>
                 <div class="col row wideViewDivCol">
-                    <div ng-repeat="language in languages" class="col experience">
+                    <div ng-repeat="language in languages" class="col iconAndLabelAlignCenter">
                         <img src="{{language.url}}" alt="{{language.name}} image">
                         <label>{{ language.name }}</label>
                     </div>
@@ -74,7 +74,7 @@
                     <h2 class="labelH2">Tools</h2>
                 </div>
                 <div class="col row wideViewDivCol">
-                    <div ng-repeat="tool in tools" class="col experience">
+                    <div ng-repeat="tool in tools" class="col iconAndLabelAlignCenter">
                         <img src="{{tool.url}}" alt="{{tool.name}} image">
                         <label>{{ tool.name }}</label>
                     </div>
@@ -86,7 +86,7 @@
                     <h2 class="labelH2">Concepts</h2>
                 </div>
                 <div class="col row wideViewDivCol">
-                    <div ng-repeat="concept in concepts" class="col experience">
+                    <div ng-repeat="concept in concepts" class="col">
                         <img src="{{concept.url}}" alt="{{concept.name}} image">
                         <label>{{ concept.name }}</label>
                     </div>
