--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
 
         <!-- Projects -->
-        <div id="projects" class="makeHeight100">
+        <div id="projects" class="makeHeight100" ng-controller="ProjectsController">
             <h2>Projects</h2>
             <!-- <div id="projects-slideshow" class="carousel slide makeHeight100" data-ride="carousel" data-interval="false">
                 <ol class="carousel-indicators">
