--- a/index.html
+++ b/index.html
@@ -139,32 +139,9 @@
         <!-- Projects -->
         <div id="projects" class="makeHeight100" ng-controller="ProjectsController">
             <h2>Projects</h2>
-            <!-- <div id="projects-slideshow" class="carousel slide makeHeight100" data-ride="carousel" data-interval="false">
-                <ol class="carousel-indicators">
-                  <li data-target="#projects-slideshow" data-slide-to="0" class="active"></li>
-                  <li data-target="#projects-slideshow" data-slide-to="1"></li>
-                  <li data-target="#projects-slideshow" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner makeHeight100">
-                  <div class="carousel-item makeHeight100 active">
-                    <img class="d-block w-100" src="..." alt="First slide">
-                  </div>
-                  <div class="carousel-item makeHeight100">
-                    <img class="d-block w-100" src="..." alt="Second slide">
-                  </div>
-                  <div class="carousel-item makeHeight100">
-                    <img class="d-block w-100" src="..." alt="Third slide">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#projects-slideshow" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#projects-slideshow" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-            </div> -->
+            <div id="projects-slideshow" class="makeHeight100 d-flex align-items-center justify-content-center" style="font-size: 50px;">
+                Under Construction
+            </div>
         </div>
 
         <!-- Contact -->
@@ -179,7 +156,7 @@
                     <a style="display:inline-block;" ng-if="contact.is_link" target="_blank" href="{{ contact.value }}">
                         <img src="{{ contact.icon }}"/>&nbsp;<label class="contact-label">{{ contact.value }}</label>
                     </a>
-                    <a style="display:inline-block;" ng-if="!contact.is_link && !contact.is_email" id="phone" ng-click="copyTextToClipboard(contact.value)">
+                    <a style="display:inline-block;" ng-if="contact.is_phone_number" href="tel:{{ contact.value }}" id="phone" ng-click="copyTextToClipboard(contact.value)">
                         <img src="{{ contact.icon }}"/>&nbsp;<label class="contact-label">{{ contact.value }}</label>
                     </a>
                 </div>
