Bug fix: carousel overflowing onto project

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <!-- Summary of tools -->
     <div id="tools" 
-        style="color: white;background-color: #2C2B3C;font-family: 'Lexend Exa', sans-serif; padding: 50px 0;height: 110%;" ng-controller="ToolsController">
+        style="color: white;background-color: #2C2B3C;font-family: 'Lexend Exa', sans-serif; padding: 50px 0;" ng-controller="ToolsController">
         <h2 style="text-align: center;">Tools of Trade/Understanding of Tools</h2>
         <p class="text-center ">"Fancy Quote"</p>
         <hr style="width: 70%; background-color: white;">
