--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- JQUERY Popper Bootstrap -->
+    
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.0/angular.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -37,7 +37,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
+    
     <title>Abdul-Baseet Shabi</title>
 </head>
 
@@ -45,7 +45,7 @@
     <!-- navigation -->
     <div id="navigation-body">
         <ul id="navigation" class="row">
-            <a href="#introduction" class="navigation-item col">Introduction</a>
+            <a href="#introduction" class="navigation-item col active-nav">Introduction</a>
             <a href="#profile" class="navigation-item col">Education</a>
             <a href="#experience" class="navigation-item col">Experience</a>
             <a href="#tools" class="navigation-item col">Tools</a>
@@ -87,8 +87,8 @@
         </div>
         <div class="makeHeight100 col-4 d-flex align-items-center" style="font-family: 'Abel', sans-serif;">
             <div style="height: 90%; width: 90%; margin: 0px auto;">
-                <h2 style="width:100%;text-align: center;font-size: xxx-large;">Education <i
-                        class="fas fa-graduation-cap" style="color: #B2B0B0;"></i></h2>
+                <h2 style="width:100%;text-align: center;font-size: xxx-large;"  class="test-animation">Education <i
+                        class="fas fa-graduation-cap " style="color: #B2B0B0;"></i></h2>
                 <div style="background-color: #2C2B3C;">
                     <label
                         style="width:100%;text-align: center;font-size: xx-large;background-color: #121420;margin-bottom:0px;">Activities/Awards/Honors</label>
@@ -161,7 +161,7 @@
 
     <!-- Summary of tools -->
     <div id="tools" 
-        style="color: white;background-color: #2C2B3C;font-family: 'Lexend Exa', sans-serif; padding: 50px 0;height: 110%;" ng-controller="ToolsController">
+        style="color: white;background-color: #2C2B3C;font-family: 'Lexend Exa', sans-serif; padding: 50px 0;" ng-controller="ToolsController">
         <h2 style="text-align: center;">Tools of Trade/Understanding of Tools</h2>
         <p class="text-center ">"Fancy Quote"</p>
         <hr style="width: 70%; background-color: white;">
@@ -290,27 +290,24 @@
             href="https://icons8.com/icon/59925/js" style="color: #007bff;">Icons8</a></footer>
     <!-- Disclamer -->
     <!-- Button trigger modal -->
-    <button style="display: none;" type="button" class="btn btn-primary" data-toggle="modal"
+    <button id="openbutton" style="display: none;" data-backdrop="static" type="button" class="btn btn-primary" data-toggle="modal"
         data-target="#exampleModal">
         Launch demo modal
     </button>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade show" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="background-color: white;border: none;">
             <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
-                <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Disclaimer!!!</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                <button type="button" style="display: none;" class="close" id="closebutton"data-dismiss="modal" aria-label="Close">
                 </button>
+                <div class="modal-body text-center">
+                    <span class="fa fa-spinner fa-spin fa-3x w-100" style="margin-bottom: 5px;"></span>
+                    <label style="width: 100%">This Website grabs its data from a NodeJS server. <br> The serve is waking up from sleep. Please wait while it send its data.</label> 
                 </div>
-                <div class="modal-body">
-                    Website is still undergoing construction. But you can view the content so far.
-                </div>
-            </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
