--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <!-- Introduction -->
-    <div id="introduction" class="row makeHeight100 test-animation" ng-controller="IntroductionController">
+    <div id="introduction" class="row makeHeight100"  ng-controller="IntroductionController">
         <!-- <div id="introduction-img" class="justify-content-center align-items-center"> -->
         <!-- <div id="introduction-img">
             <img src="assets/introduction.JPG" alt="My Picture">
@@ -303,7 +303,7 @@
                 </button>
                 <div class="modal-body text-center">
                     <span class="fa fa-spinner fa-spin fa-3x w-100" style="margin-bottom: 5px;"></span>
-                    <label style="width: 100%">This Website grabs its data from a NodeJS server. <br> The serve is waking up from sleep. Please wait while it send its data.</label> 
+                    <label style="width: 100%">This website grabs its data from a NodeJS server. <br> The serve is waking up from sleep. Please wait while it send its data.</label> 
                 </div>
             </div>
         </div>
