--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 </button>
                 <div class="modal-body text-center">
                     <span class="fa fa-spinner fa-spin fa-3x w-100" style="margin-bottom: 5px;"></span>
-                    <label style="width: 100%">This website grabs its data from a NodeJS server. <br> The serve is waking up from sleep. Please wait while it send its data.</label> 
+                    <label style="width: 100%">This website grabs its data from a NodeJS server. <br> The server is waking up. Please wait while it send the required data.</label> 
                 </div>
             </div>
         </div>
