responsive font description

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         class="fas fa-graduation-cap " style="color: #B2B0B0;"></i></h2>
                 <div style="background-color: #2C2B3C;">
                     <label
-                        style="width:100%;text-align: center;font-size: xx-large;background-color: #121420;margin-bottom:0px;">Activities/Awards/Honors</label>
+                        style="width:100%;text-align: center;font-size: xx-large;background-color: #121420;margin-bottom:0px;">Activities / Awards / Honors</label>
                     <div>
                         <label ng-repeat="activity in activities"
                             style="width: 100%;border-bottom: 1px solid black;margin-bottom:0px; padding: 5px 5px;font-size: 1.25rem;text-align: center;">{{ activity.value }}</label>
